# FreeTonVanity

./: Cargo.toml  README.md
src/: addr_checker.rs  addr_gen.rs  file_backend.rs  main.rs
src/addr_gen/: hdkey.rs
