[package]
name = "address_gen"
version = "0.1.0"
authors = ["pavel <pavelkhachatrian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
#tokio = { version = "0.2.22", features = ["macros", "tcp", "dns", "io-util"] }
hmac = "0.7.1"
sha2 = "0.8"
#base64 = "0.10.1"
#crc16 = "0.4.0"
ed25519-dalek = "1.0.0-pre.4"
rand = "0.7.3"
hex = "0.3.2"
#serde_json = "1.0"
bip39 = { git = "https://github.com/tonlabs/bip39-rs.git" }
ton_sdk = { git = "https://github.com/tonlabs/ton-sdk.git", default-features = false }
base58 = "0.1.0"
pbkdf2 = { version = "0.3.0", default-features = false, features = [] }
byteorder = "1.3.2"
libsecp256k1 = "0.2.2"
sodalite = { git = "https://github.com/tonlabs/sodalite.git", features = ["rand"] }
clap = "2.33.1"
#ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
#redis = "0.16.0"
#postgres = "0.15.2"
#postgres-binary-copy = "0.5.0"
streaming-iterator = "0.1.5"
csv = "1.1.3"
#r2d2 = "0.8"

#lazy_static = "1.4.0"
itertools = "0.9.0"
#regex = "1.3.9"



#criterion = "0.3"
#[[bench]]
#name = "ed25519_benchmarks"
#harness = false